<resources>
    <string name="app_name">Marvel List</string>
    <string name="app_logo_string">M</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Marvel List App</string>
    <string name="nav_header_desc">Marvel logo</string>

    <string name="menu_characters">Characters</string>
    <string name="menu_about">About</string>
    <string name="menu_char_detail">Character details</string>

    <!-- character detail fragment-->
    <string name="character_detail_description">Description</string>
    <string name="character_detail_description_not_found">Description not found</string>
    <string name="character_detail_comics_title">Comics</string>
    <string name="character_detail_stories_title">Stories</string>
    <string name="character_detail_events_title">Events</string>
    <string name="character_detail_series_title">Series</string>

    <!-- about -->
    <string name="about_text">This application is the result of a technical labor test. \n \n The resources used come from https://developer.marvel.com/docs. \n \n Application made entirely by Sergio González Ramos.</string>

</resources>