<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_character">

    <fragment
        android:id="@+id/nav_character"
        android:name="com.marvellist.ui.character.CharacterListFragment"
        android:label="@string/menu_characters"
        tools:layout="@layout/fragment_character_list" >
        <action
            android:id="@+id/action_nav_character_list_to_nav_char_detail"
            app:destination="@id/nav_char_detail"
            app:popUpTo="@id/nav_character"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.marvellist.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_char_detail"
        android:name="com.marvellist.ui.characterdetail.CharacterDetailFragment"
        android:label="@string/menu_char_detail"
        tools:layout="@layout/fragment_character_detail" >
        <argument
            android:name="characterModel"
            app:argType="com.marvellist.domain.model.CharacterModel" />
    </fragment>

</navigation>